[gd_scene load_steps=21 format=3 uid="uid://csci20kpuc0tm"]

[ext_resource type="Script" path="res://Script/Boss.gd" id="1_6u5iv"]
[ext_resource type="SpriteFrames" uid="uid://dicx4abqo8ugj" path="res://Asset/Musuh/spriteframe/Boss.tres" id="1_oec8t"]
[ext_resource type="Script" path="res://Scene/health_component.gd" id="3_l0t11"]
[ext_resource type="Script" path="res://Scene/hitbox_component.gd" id="3_l3p33"]
[ext_resource type="Script" path="res://Script/FiniteStateMachine.gd" id="4_dhi1g"]
[ext_resource type="Script" path="res://Scene/Musuh/BossIdle.gd" id="6_b7h3b"]
[ext_resource type="Script" path="res://Scene/Musuh/BossWalk.gd" id="7_2gd82"]
[ext_resource type="Script" path="res://Scene/Musuh/BossAttack.gd" id="8_dpdxn"]
[ext_resource type="Script" path="res://Script/BossFlameState.gd" id="9_5jfo4"]
[ext_resource type="Script" path="res://Scene/Musuh/BossDeath.gd" id="9_fof36"]
[ext_resource type="Script" path="res://Scene/Musuh/BossFlamethrower.gd" id="10_4qqa7"]
[ext_resource type="PackedScene" uid="uid://cm5tbhnfgibkd" path="res://Scene/Musuh/Flame.tscn" id="11_dcfcp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_50myu"]
size = Vector2(61, 70)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fgkim"]
size = Vector2(61, 69.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_26mos"]
size = Vector2(86.5, 68.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_3ypeh"]
radius = 100.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1a3dx"]
size = Vector2(63, 37)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_88ami"]
bg_color = Color(0.266667, 0.266667, 0.266667, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gn8sn"]
bg_color = Color(0.490196, 0.027451, 0.160784, 1)

[sub_resource type="Theme" id="Theme_84qjv"]
ProgressBar/constants/outline_size = 0
ProgressBar/styles/background = SubResource("StyleBoxFlat_88ami")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_gn8sn")

[node name="Boss" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_6u5iv")
speed = 100
health = 250
attack_damage = 15
timeBeforeAttack = 0.0
radius = 300

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -79)
sprite_frames = ExtResource("1_oec8t")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4.5, -35)
shape = SubResource("RectangleShape2D_50myu")

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("3_l0t11")

[node name="Hitbox" type="Area2D" parent="." node_paths=PackedStringArray("healthComponent")]
script = ExtResource("3_l3p33")
healthComponent = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(4.5, -35.125)
shape = SubResource("RectangleShape2D_fgkim")

[node name="WeaponHitbox" type="Area2D" parent="."]
position = Vector2(-71.25, -35)

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponHitbox"]
shape = SubResource("RectangleShape2D_26mos")
disabled = true

[node name="Detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource("CircleShape2D_3ypeh")

[node name="FlameHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlameHitbox"]
position = Vector2(3.5, -18.5)
shape = SubResource("RectangleShape2D_1a3dx")

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource("4_dhi1g")

[node name="idle" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("6_b7h3b")

[node name="walk" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("7_2gd82")

[node name="attack" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("8_dpdxn")

[node name="flame" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("9_5jfo4")

[node name="death" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("9_fof36")

[node name="flamethrower" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("10_4qqa7")
flamethrower = ExtResource("11_dcfcp")

[node name="AttackTimer" type="Timer" parent="."]

[node name="debug" type="Label" parent="."]
offset_left = -24.0
offset_top = -116.0
offset_right = 31.0
offset_bottom = -93.0
text = "asdasd
"

[node name="ProgressBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(20, 4)
offset_left = -25.0
offset_top = -90.0
offset_right = 25.0
offset_bottom = -80.0
theme = SubResource("Theme_84qjv")
show_percentage = false

[connection signal="area_entered" from="WeaponHitbox" to="." method="_on_weapon_hitbox_area_entered"]
[connection signal="area_exited" from="WeaponHitbox" to="." method="_on_weapon_hitbox_area_exited"]
[connection signal="body_entered" from="Detection" to="FiniteStateMachine/idle" method="_on_player_detection_body_entered"]
[connection signal="area_entered" from="FlameHitbox" to="." method="_on_flame_hitbox_area_entered"]
[connection signal="area_exited" from="FlameHitbox" to="." method="_on_flame_hitbox_area_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
